# pf-recommended-practices

./: .buildinfo  .gitignore  CONTRIBUTING.md  README.md  _config.yml  flake.nix  genindex.html  intro.html  intro.md  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: deploy.yml
_sources/: intro.md
_sources/bp-guide-gh/: ch1-model-formulation.md  ch2-numerical-implementation.md  ch3-data-generation-and-curation.md  ch5-problem-setup.md  ch6-result-dissemination.md
bp-guide-gh/: ch1-model-formulation.html  ch2-numerical-implementation.html  ch3-data-generation-and-curation.html  ch4-software-development.html  ch4-software-development.md  ch5-problem-setup.html  ch6-result-dissemination.html  ch6-result-dissemination.md
defaults/: markdown-notebooks.html  markdown.html  markdown.md  notebooks.html
my_book/: _toc.yml  references.bib
pf-recommended-practices/: _config.yml  _toc.yml  intro.md  references.bib
pf-recommended-practices/bp-guide-gh/: ch1-model-formulation.md  ch2-numerical-implementation.md  ch3-data-generation-and-curation.md  ch4-software-development.md  ch5-problem-setup.md  ch6-result-dissemination.md
